--- a/files/ls-chunk-store/info.ini
+++ b/files/ls-chunk-store/info.ini
@@ -1,4 +1,4 @@
-author = "Diego Rodríguez Baquero"
+author = "Diego Rodriguez Baquero"
 github = "https://github.com/DiegoRBaquero/ls-chunk-store"
 homepage = "https://www.npmjs.com/package/ls-chunk-store"
 description = "Browser localStorage chunk store that is abstract-chunk-store compliant"
