--- a/files/scrollreveal.js/info.ini
+++ b/files/scrollreveal.js/info.ini
@@ -1,5 +1,5 @@
 author = "Julian Lloyd"
 github = "https://github.com/julianlloyd/scrollReveal.js"
 homepage = "http://scrollrevealjs.org/"
-mainfile = "scrollReveal.min.js"
+mainfile = "scrollreveal.min.js"
 description = "A simple way to create and maintain how elements fade in, triggered when they enter the viewport."
