--- a/files/bliss/info.ini
+++ b/files/bliss/info.ini
@@ -2,4 +2,4 @@ author = "Lea Verou"
 github = "https://github.com/LeaVerou/bliss"
 homepage = "http://blissfuljs.com/"
 description = "Heavenly JavaScript. Want to use Vanilla JS but find native APIs a bit unwieldy? Bliss is for you."
-mainfile = "bliss.js"
+mainfile = "bliss.min.js"
