--- a/files/likely/info.ini
+++ b/files/likely/info.ini
@@ -2,4 +2,4 @@ author = "Ilya Birman"
 github = "https://github.com/ilyabirman/Likely"
 homepage = "http://ilyabirman.net/projects/likely/"
 description = "Likely is the social sharing buttons that aren’t shabby."
-mainfile = "release/likely.js"
+mainfile = "likely.js"
