--- a/files/doofinder/info.ini
+++ b/files/doofinder/info.ini
@@ -2,4 +2,4 @@ author = "Doofinder"
 github = "https://github.com/doofinder/js-doofinder"
 homepage = "http://www.doofinder.com"
 description = "Javascript Module to integrate with Doofinder Search API"
-mainfile = "doofinder.min.js"
+mainfile = "dist/doofinder.min.js"
