Add font PT Sans. Fix info.ini field author length.

--- a/files/font-pt-sans/info.ini
+++ b/files/font-pt-sans/info.ini
@@ -1,4 +1,4 @@
-author = "Aleksandra Korolkova, O.Umpelova, V.Yefimov"
+author = "A.Korolkova,O.Umpelova,V.Yefimov"
 homepage = "http://www.paratype.ru/public/"
 description = "The Public Type or PT Fonts are a family of free/libre fonts released from 2009 onwards, comprising PT Sans, PT Serif and PT Mono."
 mainfile = "stylesheet.css"
