Set field mainfile.

--- a/files/font-pt-sans/info.ini
+++ b/files/font-pt-sans/info.ini
@@ -2,4 +2,4 @@ author = "Alexandra Korolkova"
 github = ""
 homepage = "http://www.paratype.ru/public/"
 description = "The Public Type or PT Fonts are a family of free/libre fonts released from 2009 onwards, comprising PT Sans, PT Serif and PT Mono."
-mainfile = ""
+mainfile = "stylesheet.css"
