--- a/files/quora-widget/info.ini
+++ b/files/quora-widget/info.ini
@@ -1,5 +1,5 @@
 author = "Arpit Bhayani"
 github = "https://github.com/arpitbbhayani/quora-widget"
 homepage = "http://codeville.org.in/quora"
-description = "quora cards for your profile"
+description = "quora cards and widgets for your profile"
 mainfile = "quora-widget.min.js"
