--- a/files/whitestormjs/info.ini
+++ b/files/whitestormjs/info.ini
@@ -1,5 +1,5 @@
 author = "Alexander Buzin"
-github = "https://github.com/sasha240100/WhitestormJS"
-homepage = "https://github.com/sasha240100/WhitestormJS/wiki"
+github = "https://github.com/whitestormjs/Whitestorm.js"
+homepage = "http://whitestormjs.xyz"
 description = "WhitestormJS is a library to combine Three.js with Cannon.js, making WebGL development easy."
 mainfile = "whitestorm.min.js"
