--- a/files/sharer.js/info.ini
+++ b/files/sharer.js/info.ini
@@ -1,4 +1,4 @@
-author = "Ellison Leão"
+author = "Ellison Leao"
 github = "https://github.com/ellisonleao/sharer.js"
 homepage = "http://ellisonleao.github.io/sharer.js/"
 description = "Create custom social share DOM elements. No Dependencies."
