--- a/files/scrollreveal.js/info.ini
+++ b/files/scrollreveal.js/info.ini
@@ -2,4 +2,4 @@ author = "Julian Lloyd"
 github = "https://github.com/julianlloyd/scrollReveal.js"
 homepage = "http://scrollrevealjs.org/"
 mainfile = "scrollreveal.min.js"
-description = "A simple way to create and maintain how elements fade in, triggered when they enter the viewport."
+description = "Easy scroll animations for web and mobile browsers."
