fix(info.ini): update URLs

--- a/files/scrollreveal.js/info.ini
+++ b/files/scrollreveal.js/info.ini
@@ -1,5 +1,5 @@
 author = "Julian Lloyd"
-github = "https://github.com/julianlloyd/scrollReveal.js"
-homepage = "http://scrollrevealjs.org/"
+github = "https://github.com/jlmakes/scrollreveal.js"
+homepage = "https://scrollrevealjs.org/"
 mainfile = "scrollreveal.min.js"
 description = "Easy scroll animations for web and mobile browsers."
