added bootstrap-block-grid (fixed)

--- a/files/bootstrap-block-grid/info.ini
+++ b/files/bootstrap-block-grid/info.ini
@@ -2,3 +2,4 @@ author = "Jonathan Hornung"
 github = "https://github.com/JohnnyTheTank/bootstrap-block-grid"
 homepage = "http://plnkr.co/qkyOlC"
 description = "real block grid for Twitter Bootstrap"
+mainfile = ""
