--- a/files/kick_sovetnik/info.ini
+++ b/files/kick_sovetnik/info.ini
@@ -1,5 +1,5 @@
 author = "Serjo Pepper"
 github = "https://github.com/SerjoPepper/kick_sovetnik"
 homepage = "https://github.com/SerjoPepper/kick_sovetnik"
-description = "KickSovetnik поможем вам заблокировать и отключить Яндекс-Советник на страницах товаров вашего интернет-магазина"
+description = "KickSovetnik helps you to turn off Yandex.Sovetnik service on your e-commerce site."
 mainfile = "dist/index.min.js"
