--- a/files/font-antykwa-poltawskiego/info.ini
+++ b/files/font-antykwa-poltawskiego/info.ini
@@ -1,4 +1,4 @@
-author = "Adam Jerzy Poltawski | fontsquirrel.com"
+author = "fontsquirrel.com"
 homepage = "http://fontsquirrel.com/"
 description = "Antykwa Poltawskiego WebFont"
 mainfile="stylesheet.css"
