--- a/files/buttons/info.ini
+++ b/files/buttons/info.ini
@@ -2,4 +2,4 @@ author = "Alex Wolfe"
 github = "https://github.com/alexwolfe/Buttons"
 homepage = "http://unicorn-ui.com/buttons/"
 description = "Buttons is a highly customizable production ready mobile web and desktop css button library."
-mainfile = "buttons.min.css"
+mainfile = "css/buttons.css"
