Switch to the minified version in info.ini

--- a/files/jotted/info.ini
+++ b/files/jotted/info.ini
@@ -2,4 +2,4 @@ author = "Ionut Colceriu"
 github = "https://github.com/ghinda/jotted"
 homepage = "https://github.com/ghinda/jotted"
 description = "environment for showcasing HTML, CSS and JavaScript, with editable source"
-mainfile = "jotted.js"
+mainfile = "jotted.min.js"
