--- a/files/stream.js/info.ini
+++ b/files/stream.js/info.ini
@@ -2,4 +2,4 @@ author = "Dionysis Zindros"
 github = "https://github.com/dionyziz/stream.js"
 homepage = "http://www.streamjs.org/"
 description = "Lazy streams."
-mainfile = "stream.js"
+mainfile = "stream.min.js"
