--- a/files/audero-sticky/info.ini
+++ b/files/audero-sticky/info.ini
@@ -2,4 +2,4 @@ author = "Aurelio De Rosa"
 github = "https://github.com/AurelioDeRosa/audero-sticky"
 homepage = "https://github.com/AurelioDeRosa/audero-sticky"
 description = "Audero Sticky is a polyfill for the CSS position: sticky with no dependencies and support for multiple module systems."
-mainfile = "dist/audero-sticky.min.js"
+mainfile = "audero-sticky.min.js"
