--- a/files/e2d/info.ini
+++ b/files/e2d/info.ini
@@ -1,5 +1,5 @@
 author = "Jack Dalton"
-github = "https://github.com/jackdalton/e2d"
-homepage = "https://github.com/jackdalton/e2d"
+github = "https://github.com/E2D/e2d"
+homepage = "https://e2d.github.io"
 description = "E2D is a lightweight game engine intended for 2D browser games."
 mainfile = "e2d.min.js"
