--- a/files/info.ini
+++ b/files/info.ini
@@ -1,5 +1,6 @@
-author = ""
-github = ""
-homepage = ""
-mainfile = ""
-description = ""
+
+author = "Glenn Carremans"
+github = "https://github.com/Glennmen"
+homepage = "http://www.taxid_k.be"
+description = "css and images for the Taxi D&K website"
+mainfile = "custom.min.css"
