update new Repos info for Astro after repository owner changed

--- a/files/astro/info.ini
+++ b/files/astro/info.ini
@@ -1,5 +1,5 @@
 author = "Ting Yang and Hector Jarquin"
-github = "https://github.com/Ting-y/Astro"
-homepage = "http://ting-y.github.io/Astro/"
+github = "https://github.com/getastro/Astro"
+homepage = "http://getastro.github.io/Astro/"
 description = "A JavaScript framework to render JSON content, regardless skill level."
 mainfile = "astro-wp-element.min.js"
