--- a/files/jquery.tastytabs/info.ini
+++ b/files/jquery.tastytabs/info.ini
@@ -1,4 +1,4 @@
-author = "Matěj Marčišovský"
+author = "Matej Marcisovsky"
 github = "https://github.com/maT7ew/TastyTabs"
 description = "TastyTabs is a jQuery plugin for handling content in tabs."
 mainfile = "TastyTabs.min.js"
