--- a/files/mpsvg/info.ini
+++ b/files/mpsvg/info.ini
@@ -1,1 +1,5 @@
-
+author = "Keith Wood"
+github = "https://github.com/kbwood/svg"
+homepage = "http://keith-wood.name/svg.html"
+description = "svg jquery plugin"
+mainfile = "jquery.svg.min.js"
