--- a/files/gridable/info.ini
+++ b/files/gridable/info.ini
@@ -2,4 +2,4 @@ author = "Thomas Deinhamer"
 github = "https://github.com/gridable/gridable"
 homepage = "http://gridable.ga/"
 description = "gridable is a responsive layout-grid using flexible-box."
-mainfile = "gridable.bem.css"
+mainfile = "bem.min.css"
