--- a/files/jquery-lang/info.ini
+++ b/files/jquery-lang/info.ini
@@ -1,4 +1,5 @@
 author = "Irrelon Software Limited"
-github = "github.com/Irrelon/jquery-lang-js"
+github = "https://github.com/Irrelon/jquery-lang-js"
 homepage = "http://uk.linkedin.com/pub/rob-evans/25/b94/8a5/"
 description = "Instantly switch content languages client-side"
+mainfile="jquery-lang.js"
