--- a/files/jquery-cookie-eu/info.ini
+++ b/files/jquery-cookie-eu/info.ini
@@ -1,4 +1,5 @@
 author = "Richard Dancsi"
-github = "github.com/wimagguc/jquery-eu-cookie-law-popup"
+github = "https://github.com/wimagguc/jquery-eu-cookie-law-popup"
 homepage = "http://www.wimagguc.com/2015/03/jquery-eu-cookie-law-popup/"
 description = "An easy-to-install jQuery plugin to create EU Cookie Law popups"
+mainfile="jquery-eu-cookie-law-popup.js"
