--- a/files/brass/info.ini
+++ b/files/brass/info.ini
@@ -2,4 +2,4 @@ author = "Justin Breen"
 github = "https://github.com/jstnbr/brass"
 homepage = "http://jstnbr.co/brass"
 description = "Light, modular, responsive css micro library"
-mainfile = "brass.min.js"
+mainfile = "brass.min.css"
