--- a/files/525icons/info.ini
+++ b/files/525icons/info.ini
@@ -2,4 +2,4 @@ author = "Rune Strømsted"
 github = "https://github.com/runestro/525icons"
 homepage = "http://525icons.com"
 description = "525icons web font is a collection of pictographic icons, well suited for websites and apps."
-mainfile = "525icons.css"
+mainfile = "fonts/525icons.min.css"
