--- a/files/525icons/info.ini
+++ b/files/525icons/info.ini
@@ -1,4 +1,4 @@
-author = "Rune Strømsted"
+author = "Rune Stromsted"
 github = "https://github.com/runestro/525icons"
 homepage = "http://525icons.com"
 description = "525icons web font is a collection of pictographic icons, well suited for websites and apps."
