fixed jquery.photoswipe mainfile

--- a/files/jquery.photoswipe/info.ini
+++ b/files/jquery.photoswipe/info.ini
@@ -2,4 +2,4 @@ author = "Wang Shugen"
 github = "https://github.com/yaquawa/jquery.photoswipe"
 homepage = "https://github.com/yaquawa/jquery.photoswipe"
 description = "The jQuery plugin for PhotoSwipe"
-mainfile = "dist/jquery.photoswipe.js"
+mainfile = "jquery.photoswipe.js"
