--- a/files/stackblur/info.ini
+++ b/files/stackblur/info.ini
@@ -2,4 +2,4 @@ author = "Mario Klingemann"
 github = "https://github.com/flozz/StackBlur"
 homepage = "https://github.com/flozz/StackBlur"
 description = "Fast and almost Gaussian blur by Mario Klingemann"
-mainfile = "dist/stackblur.min.js"
+mainfile = "stackblur.min.js"
