--- a/files/adminplus/info.ini
+++ b/files/adminplus/info.ini
@@ -1,4 +1,5 @@
 author = "ThemeKit.io"
 github = "https://github.com/themekit/adminplus"
+homepage = "http://adminplus.themekit.io"
 description = "AdminPlus Lite Bootstrap Theme"
 mainfile = "adminplus.js"
