--- a/files/countly-sdk-web/info.ini
+++ b/files/countly-sdk-web/info.ini
@@ -2,4 +2,4 @@ author = "Countly"
 github = "https://github.com/Countly/countly-sdk-web"
 homepage = "https://count.ly/"
 description = "Countly Web SDK to use with Countly server"
-mainfile = "lib/countly.min.js"
+mainfile = "countly.min.js"
