--- a/files/perfect-scrollbar/info.ini
+++ b/files/perfect-scrollbar/info.ini
@@ -2,4 +2,4 @@ author = "Hyunje Alex Jun"
 github = "https://github.com/noraesae/perfect-scrollbar"
 homepage = "http://noraesae.github.io/perfect-scrollbar/"
 description = "Minimalistic but perfect custom scrollbar plugin"
-mainfile = "index.js"
+mainfile = "js/min/perfect-scrollbar.min.js"
