fix the case of the main file mainfile (js/jquery.jqgrid.min.js)

--- a/files/free-jqgrid/info.ini
+++ b/files/free-jqgrid/info.ini
@@ -2,4 +2,4 @@ author = "Oleg Kiriljuk"
 github = "https://github.com/free-jqgrid/jqGrid"
 homepage = "https://github.com/free-jqgrid/jqGrid/wiki"
 description = "grid as jQuery plugin - fork of jqGrid before licensing change"
-mainfile = "js/jquery.jqGrid.min.js"
+mainfile = "js/jquery.jqgrid.min.js"
