--- a/files/js-joda/info.ini
+++ b/files/js-joda/info.ini
@@ -2,4 +2,4 @@ author = "Philipp Thuerwaechter"
 github = "https://github.com/pithu/js-joda"
 homepage = "http://pithu.github.io/js-joda/"
 description = "Immutable data and time library with domain-driven design for javascript"
-mainfile = "dist/js-joda.js"
+mainfile = "js-joda.js"
