--- a/files/vast-player/info.ini
+++ b/files/vast-player/info.ini
@@ -1,5 +1,5 @@
 author = "Reelcontent, Inc"
 github = "https://github.com/cinema6/vast-player"
-homepage = "https://reelcontent.com/"
+homepage = "http://reelcontent.com/"
 description = "Playback VAST creatives in a web browser"
 mainfile = "vast-player.min.js"
