--- a/files/timepicker.js/info.ini
+++ b/files/timepicker.js/info.ini
@@ -2,5 +2,5 @@
 author = "Jonatas Walker"
 github = "https://github.com/jonataswalker/timepicker.js"
 homepage = "https://github.com/jonataswalker/timepicker.js"
-description = "Yet Another Timepicker"
-mainfile = "build/timepicker.min.js"
+description = "Yet Another (framework free) Timepicker"
+mainfile = "timepicker.min.js"
