--- a/files/vuex/info.ini
+++ b/files/vuex/info.ini
@@ -2,4 +2,4 @@ author = "Evan You"
 github = "https://github.com/vuejs/vuex"
 homepage = "http://vuex.vuejs.org"
 description = "State management architecture for Vue.js"
-mainfile = "veux.min.js"
+mainfile = "vuex.min.js"
