--- a/files/redux/info.ini
+++ b/files/redux/info.ini
@@ -1,5 +1,5 @@
 author = "Dan Abramov"
-github = "https://github.com/rackt/redux"
-homepage = "http://rackt.github.io/redux"
+github = "https://github.com/reactjs/redux"
+homepage = "http://redux.js.org/"
 description = "Predictable state container for JavaScript apps"
 mainfile = "redux.min.js"
