Update mainfile in info.ini

--- a/files/pokewrap/info.ini
+++ b/files/pokewrap/info.ini
@@ -2,4 +2,4 @@ author = "Benjamin Chauvette"
 github = "https://github.com/bdchauvette/pokewrap"
 homepage = "https://github.com/bdchauvette/pokewrap"
 description = "Pokewrap is a wrapper for the Pokemon API"
-mainfile = "dist/browser/pokewrap.min.js"
+mainfile = "pokewrap.min.js"
