--- a/files/525icons/info.ini
+++ b/files/525icons/info.ini
@@ -1,5 +1,5 @@
 author = "Rune Stromsted"
 github = "https://github.com/runestro/525icons"
 homepage = "http://525icons.com"
-description = "525icons web font is a collection of pictographic icons, well suited for websites and apps."
-mainfile = "fonts/525icons.min.css"
+description = "525icons web font is a collection of pictographic icons and logos, well suited for websites and apps."
+mainfile = "525icons.min.css"
