--- a/files/jquery.timeliny/info.ini
+++ b/files/jquery.timeliny/info.ini
@@ -1,4 +1,4 @@
-author = "Sylvain Simao"
+author = "maoosi"
 github = "https://github.com/maoosi/jquery.timeliny"
 homepage = "https://maoosi.github.io/jquery.timeliny"
 description = "Timeliny is a responsive jQuery plugin for creating year-based interactive timelines."
