--- a/files/meldio-client/info.ini
+++ b/files/meldio-client/info.ini
@@ -1,5 +1,5 @@
 author = "Nemanja Stanarevic"
 github = "https://github.com/meldio/meldio-client-js"
-homepage = "https://www.meldio.com"
+homepage = "http://www.meldio.com"
 description = "Meldio Client for JavaScript"
 mainfile = "meldio.min.js"
