Removed non-ascii letters

--- a/files/jquery.calendario/info.ini
+++ b/files/jquery.calendario/info.ini
@@ -1,4 +1,4 @@
-author = "Boží Ďábel"
+author = "Devi Prasad"
 github = "https://github.com/deviprsd21/Calendario"
 homepage = "https://deviprsd21.github.io/Calendario/"
 description = "A jQuery calendar plugin for creating flexible calendars."
