--- a/files/auto-toc.js/info.ini
+++ b/files/auto-toc.js/info.ini
@@ -2,4 +2,4 @@ author = "timaschew"
 github = "https://github.com/timaschew/auto-toc.js"
 homepage = "https://github.com/timaschew/auto-toc.js"
 description = "On the fly TOC generator"
-mainfile = "index.js"
+mainfile = "dist.js"
