--- a/files/jquery.cropit/info.ini
+++ b/files/jquery.cropit/info.ini
@@ -2,4 +2,4 @@ author = "Scott Cheng, Yufei Liu"
 github = "https://github.com/scottcheng/cropit"
 homepage = "http://scottcheng.github.io/cropit/"
 description = "Customizable crop and zoom."
-mainfile = "dist/jquery.cropit.js"
+mainfile = "jquery.cropit.js"
