--- a/files/motajs/info.ini
+++ b/files/motajs/info.ini
@@ -1,4 +1,4 @@
-author = "jdmota"
+author = "João Mota"
 github = "https://github.com/jdmota/MotaJS/"
 homepage = "http://jdmota.github.io/motajs/"
 description = "JavaScript library that aims to allow the developer to easily build web applications."
