--- a/files/places.js/info.ini
+++ b/files/places.js/info.ini
@@ -1,3 +1,4 @@
 author = "algolia"
 description = "The easiest way to add fast geo search to your website. https://community.algolia.com/places/"
+homepage = "https://community.algolia.com"
 mainfile = "places.min.js"
